debugging spacing issue

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
 
 article {
     border: 4px, solid, black;
-    padding: 10px;
+    padding: 150px;
     margin: 50%;
 }
 
